crates/plotnik-tests/tests/04-emit/types/definitions/error_captured_ref_to_captureless_def.txt
A = (identifier)

Q = (program
  (expression_statement (A) @x)
)
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:4:25
  |
1 | A = (identifier)
  | ---------------- `A` is defined here
...
4 |   (expression_statement (A) @x)
  |                         ^^^
  |
help: make `A` produce a result by changing `(identifier)` to `(identifier) @x_value` in definition `A`
help: or remove `@x` and capture a node pattern directly
